--- a/styles.css
+++ b/styles.css
@@ -1,56 +1,3 @@
-@import "{{ site.theme }}";
-
-/*
-.verde {
-    background-color: #7A9B62;
-}
-
-.vino {
-    background-color: #756069;
-}
-
-.marron {
-    background-color: #512F2E;
-}
-
-.rosado {
-    background-color: #Af5D62;
-}
-
-.gris-claro {
-    background-color: #F2EBE7;
-}
-
-.negro {
-    background-color: #423A31;
-}
-
-.texto-verde {
-    color: #7A9B62;
-}
-
-.texto-vino {
-    color: #756069;
-}
-
-.texto-marron {
-    color: #512F2E;
-}
-
-.texto-rosado {
-    color: #Af5D62;
-}
-
-.texto-gris-claro {
-    color: #F2EBE7;
-}
-
-.texto-negro {
-    color: #423A31;
-}
-*/
-
-
 :root {
     --slate-100: #f1f5f9;
     --slate-300: #e1cbda;
@@ -97,7 +44,7 @@ button {
     box-sizing: border-box;
     padding: 0.5rem 1rem;
     border: 0.2rem solid var(--moradito);
-    transition: all 0.2ss;
+    transition: all 0.2s;
     background: var(--rosado);
     color: var(--slate-100);
     font-size: medium;
@@ -116,7 +63,7 @@ button:focus {
 
 input[type="submit"]:active,
 input[type="button"]:active,
-button:hover {
+button:active {
     background: var(--moradito);
 }
 
