--- a/app/styles.css
+++ b/app/styles.css
@@ -17,6 +17,9 @@
 .results {
     display: flex;
     flex-wrap: wrap;
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
     gap: 2rem;
     justify-content: center;
 }
@@ -42,7 +45,7 @@
     width: 100%;
     height: 12rem;
     object-fit: cover;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
 }
 
 .card__title {
@@ -64,9 +67,9 @@
 }
 
 .input-container__input {
-    padding: 0.5rem 1rem;
+    padding: 1rem 1rem;
     border: 1px solid #ccc;
-    border-radius: 0.5rem;
+    border-radius: 2rem;
     width: 100%;
     max-width: 400px;
 }
@@ -76,7 +79,7 @@ button {
     background-color: var(--rosado);
     color: white;
     border: none;
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     cursor: pointer;
     font-size: 1rem;
     transition: background-color 0.3s ease;
