--- a/carrito/styles.css
+++ b/carrito/styles.css
@@ -1,12 +1,15 @@
 .main {
     max-width: 1024px;
-    margin: 0 auto;
+    margin: 1 auto;
 }
 
 .categories {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
     gap: 2rem;
     margin: 2rem 0;
 }
@@ -15,25 +18,40 @@
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
     justify-content: center;
 }
 
 .card {
     display: flex;
     flex-direction: column;
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
     width: 10rem;
 }
 
 .card__img {
     width: 10rem;
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
     height: 10rem;
     object-fit: contain;
 }
 
 .card__title {
     font-size: large;
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
 .card__price {
     font-weight: bold;
+    margin: 2rem;
+    padding: 1rem;
+    border-radius: 1rem;
 }
